# ktool

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  header.yml
.github/workflows/: build.yml  ci.yml  e2e.yml  fmt.yml  lint.yml  release.yml  test.yml
src/: file_codec.rs  json_output.rs  lib.rs  main.rs  message.rs  sink.rs  source.rs
src/cli/: cp.rs  metadata.rs  mod.rs  read.rs  write.rs
src/cli/common/: kafka_opts.rs  mod.rs  offset.rs  target.rs
src/sink/: file.rs  kafka.rs
src/source/: file.rs  kafka.rs
tests/: docker-compose.yml  e2e.rs  fixture.kbin  kafka.rs
tests/common/: mod.rs
