[package]
name = "ktool"
version = "1.1.0"
edition = "2021"
authors = ["Dom <dom@itsallbroken.com>"]
description = "A dead-simple tool for working with data in Kafka"
documentation = "https://docs.rs/ktool"
repository = "https://github.com/domodwyer/ktool"
license = "Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["kafka"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28.0", features = ["zstd", "libz"], default-features = false }
serde = "1.0.196"
serde_json = "1.0.114"
bincode = "1.3.3"
clap = { version = "3.1.18", features = ["derive"] }
thiserror = "1.0.57"
anyhow = "1.0.80"
indicatif = { version = "0.16.2", features = ["improved_unicode"] }
base64 = "0.21.7"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_matches = "1.5.0"
paste = "1.0.14"

[[bin]]
name = "ktool"

[lib]
name = "ktool"
